* May 25 2006, Kristian Van Der Vliet *

Combined updates from Jan L. Hauffa and Arno Klenke

	* Improved conditionals handling
	* Mutex handling is more compliant
	* pthread_cleanup_push(), pthread_cleanup_pop() implemented & the cleanup
	  handlers are called from pthread_exit()
	* Basic pthread_join() implementation

* Oct 05 2002, Kristian Van Der Vliet *
 
Initial checkin.  The following is complete :

	* Thread creation and deletion
	* Thread attributes
	* Mutexes
	* Conditional variables, including pthread_cond_timedwait()
	* Misc. parts such as pthread_self(), pthread_equal() etc.

The following is still to be done :

	* Thread joins
	* Cancellation
	* Cleanup handlers via. pthread_cleanup_push() and pthread_cleanup_pop()
	* X/Open R/W locks
	* Misc. parts such as pthread_sigmask(), pthread_detach() etc.
